--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <header class="header">
+
   <div class="container">
     <div class="header-inner">
       <div class="top">
         <div class="top-inner">
-          <span>Logo</span>
+          <!-- <span>Logo</span> -->
+          <a href="#">
+            <img src="assets/images/discord_logo.svg" alt="discord_logo" class="header-logo">
+          </a>
           <nav class="header-nav">
             <a href="#" class="header-link">Download</a>
             <a href="#" class="header-link">Nitro</a>
@@ -25,6 +29,18 @@
 
     </div>
   </div>
+  <div class="bg-images">
+      <img src="/assets/images/e6d57714479874c665b36c7adee76b1d.svg" alt="" class="first">
+      <img src="/assets/images/8a8375ab7908384e1fd6efe408284203.svg" alt="" class="second">
+      <img src="/assets/images/c40c84ca18d84633a9d86b4046a91437.svg" alt="" class="third">
 
+  </div>
 </header>
+
+<main class="about">
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+</main>
 <router-outlet></router-outlet>
