--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,46 @@
 .container {
   max-width: 1260px;
   margin: 0 auto;
+  position: relative;
+  z-index: 1;
 }
+.bg-images {
+  z-index: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+
+  .first {
+   position: absolute;
+   z-index: 0;
+   left: 50%;
+   bottom: 0;
+     transform: translate(-50%, 0%);
+
+ }
+ .second {
+   position: absolute;
+   z-index: 0;
+   left: 50%;
+   bottom: 0;
+   transform: translate(-50%, 0%);
+   margin-left: -615px;
+ }
+ .third {
+   position: absolute;
+   z-index: 0;
+   left: 50%;
+   bottom: 0;
+   transform: translate(-50%, 0%);
+   margin-left: 580px;
+ }
+
+}
+
 .header {
-  min-height: 690px;
+  position: relative;
+  height: 650px;
   background-color: #404eed;
   .header-inner {
     .top-inner {
@@ -15,9 +52,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 20px;
+      margin: 35px auto;
       .header-link {
-        margin-right: 20px;
+        font-size: 1.2em;
+        margin-right: 40px;
         text-decoration: none;
         color: #fff;
       }
@@ -27,6 +65,11 @@
     }
   }
 }
+
+.header-logo {
+  width: 124px;
+  height: auto;
+}
 .top {
   margin-bottom: 70px;
 }
@@ -34,9 +77,10 @@
 .header-btn {
   background-color: #fff;
   color: #000;
-  padding: 6px 12px;
-  border-radius: 20px;
+  padding: 12px 16px;
+  border-radius: 40px;
   text-decoration: none;
+  font-size: 18px;
   transition: color .2s;
 }
 .header-btn:hover {
@@ -47,6 +91,7 @@
   color: #fff;
 
     .bottom-links{
+      z-index: 1;
       display: flex;
       justify-content: center;
       .btn-white {
@@ -65,10 +110,12 @@
         padding: 20px 40px;
         border-radius: 40px;
         border: 0px;
+        font-size: 1.2em;
       }
     }
   h1{
     margin-bottom: 50px;
+    font-size: 2  em;
   }
   p {
     max-width: 780px;
