--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,9 +38,91 @@
 </header>
 
 <main class="about">
-  <section></section>
-  <section></section>
-  <section></section>
-  <section></section>
+  <section>
+    <div class="container">
+      <img src="/assets/images/46b2132c01604c9493d558de444929f4.svg" alt="">
+      <div class="about-info">
+        <h1>Create an invite-only place where you belong</h1>
+        <p>Discord servers are organized into topic-based channels where you can collaborate, share, and just talk about your day without clogging up a group chat.</p>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="about-info">
+        <h1>Where hanging out is easy</h1>
+        <p>Grab a seat in a voice channel when you’re free. Friends in your server can see you’re around and instantly pop in to talk without having to call.</p>
+      </div>
+      <img src="/assets/images/575a0322f3b36ca2fecb23ad2c6dd5ad.svg" alt="">
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <img src="/assets/images/921b1ae33edca174b6ebe787bb8b6c3b.svg" alt="">
+      <div class="about-info">
+        <h1>From few to a fandom</h1>
+        <p>Get any community running with moderation tools and custom member access. Give members special powers, set up private channels, and more.</p>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="about-info">
+        <h1>RELIABLE TECH FOR STAYING CLOSE</h1>
+        <p>Low-latency voice and video feels like you’re in the same room. Wave hello over video, watch friends stream their games, or gather up and have a drawing session with screen share.</p>
+      </div>
+      <img src="/assets/images/98ea5b9e92e304c7d352ac462996adc5.svg" alt="">
+      <div class="download-block">
+        <h1>Ready to start your journey?</h1>
+        <button type="button" name="button" class="btn-blue">Download for Windows</button>
+      </div>
+    </div>
+
+  </section>
 </main>
+
+
+<footer>
+  <div class="container">
+    <nav>
+      <div class="footer-navigation">
+        <div class="footer-links">
+          <h1 class="footer-blue">Imagine a place</h1>
+        </div>
+        <div class="footer-links">
+          <span class="link-group">Product</span>
+          <a href="#">Download</a>
+          <a href="#">Nitro</a>
+          <a href="#">Status</a>
+        </div>
+        <div class="footer-links">
+          <span class="link-group">Company</span>
+          <a href="#">About</a>
+          <a href="#">Jobs</a>
+          <a href="#">Branding</a>
+          <a href="#">Newsroom</a>
+        </div>
+        <div class="footer-links">
+          <span class="link-group">Resources</span>
+          <a href="#">College</a>
+          <a href="#">Support</a>
+          <a href="#">Safety</a>
+          <a href="#">Blog</a>
+          <a href="#">Feedback</a>
+          <a href="#">Developers</a>
+          <a href="#">StreamKit</a>
+        </div>
+        <div class="footer-links">
+          <span class="link-group">Policies</span>
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>
+          <a href="#">Guidelines</a>
+          <a href="#">Acknowledgements</a>
+          <a href="#">Licenses</a>
+          <a href="#">Moderation</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+</footer>
 <router-outlet></router-outlet>
