--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,8 @@
 
 <main class="about">
   <section>
-    <div class="container">
+    <div class="container" data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
       <img src="/assets/images/46b2132c01604c9493d558de444929f4.svg" alt="">
       <div class="about-info">
         <h1>Create an invite-only place where you belong</h1>
@@ -48,7 +49,8 @@
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container"data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
       <div class="about-info">
         <h1>Where hanging out is easy</h1>
         <p>Grab a seat in a voice channel when you’re free. Friends in your server can see you’re around and instantly pop in to talk without having to call.</p>
@@ -57,7 +59,8 @@
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container"data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
       <img src="/assets/images/921b1ae33edca174b6ebe787bb8b6c3b.svg" alt="">
       <div class="about-info">
         <h1>From few to a fandom</h1>
@@ -66,7 +69,8 @@
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container"data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
       <div class="about-info">
         <h1>RELIABLE TECH FOR STAYING CLOSE</h1>
         <p>Low-latency voice and video feels like you’re in the same room. Wave hello over video, watch friends stream their games, or gather up and have a drawing session with screen share.</p>
