--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -194,6 +194,7 @@ footer h1{
 .footer-links a {
   color: #fff;
   text-decoration: none;
+  line-height: 2em;
 }
 .footer-links a:hover {
   text-decoration: underline;
