--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -39,8 +39,31 @@
       </div>
 
 
+
+
     </div>
   </div>
 
 
 </header>
+<div class="grid">
+  <div class="grid-main">
+    <div class="card first">
+      <h1>IOS</h1>
+      <button type="button" name="button">Download</button>
+      <img src="./img/first.svg" alt="" >
+    </div>
+
+    <div class="card second">
+      <h1>IOS</h1>
+      <button type="button" name="button">Download</button>
+      <img src="./img/second.svg" alt="" >
+    </div>
+
+    <div class="card third">
+      <h1>IOS</h1>
+      <button type="button" name="button">Download</button>
+      <img src="./img/third.svg" alt="" >
+    </div>
+</div>
+</div>
