--- a/src/app/download/download.component.scss
+++ b/src/app/download/download.component.scss
@@ -55,7 +55,7 @@
   display: block;
   position: relative;
   height: 650px;
-  background-color: #404eed;
+  background-color: #23272a;
   .header-inner {
     .top-inner {
       display: flex;
@@ -229,4 +229,49 @@ footer {
 }
 .main {
   display: flex;
+}
+
+
+
+// grid
+.grid-main {
+  display: grid;
+  grid-row: auto;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 156px auto 156px auto 156px;
+  grid-row-gap: 10px;
+  .first {
+  grid-column: 1;
+  grid-row: 1;
+  }
+  .second {
+    grid-column: 2;
+    grid-row: 2/4;
+  }
+  .third {
+    grid-column: 1;
+    grid-row: 3/5;
+  }
+  .card {
+    text-align: center;
+    width: 468px;
+    height: 488px;
+    padding: 56px;
+    background-color: #f6f6f6;
+    overflow: hidden;
+    border-radius: 16px;
+  }
+  .card > img {
+    margin-top: 75px;
+  }
+
+
+
+}
+.grid {
+  display: grid;
+  /* grid-template-rows:  repeat(12,1fr);b */
+  max-width: 990px;
+  margin: 60px auto 0px;
 }
